# SPP2377_Performance-Modeling-Workshop-

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  competition.py  run.sh  setup.sh  simdops_modules_patch  start_docker.sh
code/: filter.cpp  query.cpp  query.hpp
code/utils/: allocator.hpp  cpu_set_utils.hpp  generator.hpp  stop_watch.hpp
code/utils/threads/: SplitWrapper.hpp  ThreadGroup.cpp  ThreadGroup.hpp  ThreadManager.cpp  ThreadManager.hpp  ThreadWrapper.cpp  ThreadWrapper.hpp
code/utils/vmalloc/: MemoryConfig.hpp  VamPointer.hpp  VamProphecy.hpp  crobat_benchmarking_config.json  crobat_config.json  crobat_testing_config.json  laptop_config.json  make_vmalloc_debug.py  vmalloc.hpp  vmalloc_debug.hpp  vmalloc_defs.hpp
scripts/: remove_lines.py
